added functionality to the project card + now resume icon redirects to cv after clicked

--- a/react-portfolio/src/components/ProjectData.json
+++ b/react-portfolio/src/components/ProjectData.json
@@ -2,31 +2,43 @@
 //   {
 //     "title": "Kickspot Ecommerce",
 //     "description": "Design & Development",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   },
 //   {
 //     "title": "Business Startup",
 //     "description": "blablablalb",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   },
 //   {
 //     "title": "Business Startup",
 //     "description": "blablablalb",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   },
 //   {
 //     "title": "Business Startup",
 //     "description": "blablablalb",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   },
 //   {
 //     "title": "Business Startup",
 //     "description": "blablablalb",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   },
 //   {
 //     "title": "Business Startup",
 //     "description": "blablablalb",
-//     "imgUrl": "../assets/img/Earth.jpg"
+//     "imgUrl": "../assets/img/Earth.jpg",
+//     "deployLink": "",
+//     "githubLink": ""
 //   }
 // ]
